<resources>
    <string name="app_name">Farm Road</string>
    <string name="_0">0</string>
    <string name="farm_road">Farm Road</string>
    <string name="game_speed">Game speed</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="mode">Mode</string>
    <string name="tilt">Tilt</string>
    <string name="arrows">Arrows</string>
    <string name="play">Play</string>
    <string name="records">Records</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="home">Home</string>
    <string name="hour">"     Hour"</string>
    <string name="top_10">TOP 10</string>
    <string name="date">Date</string>
    <string name="score">Score</string>
</resources>