<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weat_field_img"
    tools:context=".Activities.MenuActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        >
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/menu_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farm_road"
        android:textColor="#3F51B5"
        android:textStyle="bold|italic"
        android:textSize="40sp">
    </com.google.android.material.textview.MaterialTextView>

</androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_above="@id/menu_LAY_game_settings">



    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/menu_LAY_game_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_LBL_game_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_speed"
            android:textColor="#3F51B5"
            android:textStyle="bold|italic"
            android:textSize="30sp">
        </com.google.android.material.textview.MaterialTextView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/menu_LBL_fast"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/fast"
                android:textColor="#3F51B5"
                android:textStyle="bold|italic"
                android:textSize="25sp"
                android:gravity="end|center">
            </com.google.android.material.textview.MaterialTextView>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/menu_SWC_speed"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:thumbTint="@color/white"
                android:layout_marginHorizontal="20dp">
            </androidx.appcompat.widget.SwitchCompat>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/menu_LBL_slow"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/slow"
                android:textColor="#3F51B5"
                android:textStyle="bold|italic"
                android:textSize="25sp"
                android:gravity="start|center">

            </com.google.android.material.textview.MaterialTextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_LBL_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mode"
            android:textColor="#3F51B5"
            android:textStyle="bold|italic"
            android:textSize="30sp">
        </com.google.android.material.textview.MaterialTextView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/menu_LBL_tilt"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:text="@string/tilt"
                android:textColor="#3F51B5"
                android:textStyle="bold|italic"
                android:textSize="25sp">
            </com.google.android.material.textview.MaterialTextView>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/menu_SWC_mode"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:thumbTint="@color/white"
                android:layout_marginHorizontal="20dp">
            </androidx.appcompat.widget.SwitchCompat>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/menu_LBL_arrows"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:text="@string/arrows"
                android:textColor="#3F51B5"
                android:textStyle="bold|italic"
                android:textSize="25sp">
            </com.google.android.material.textview.MaterialTextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="30dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:backgroundTint="#3F51B5"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:textSize="25sp">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:backgroundTint="#3F51B5"
        android:text="@string/records"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:layout_marginBottom="55dp">
    </com.google.android.material.button.MaterialButton>
</androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>